05-openshift/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-web
  labels:
    app: sandbox-web
spec:
  selector:
    app: sandbox-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
