05-openshift/manifests/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sandbox-web
  labels:
    app: sandbox-web
spec:
  to:
    kind: Service
    name: sandbox-web
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
